# legalai

./: .api_url  .app_url  .env.example  .frontend_status  .gitignore  CLAUDE.md  DEV-README.md  DOCUMENT_MATRIX.md  LAUNCH.md  MODERNIZATION_ROADMAP.md  Makefile  README.md  cleanup-dev.sh  docker-compose.dev.yml  docker-compose.yml  justfile  launch-backend.sh  launch-dev.sh  launch-frontend.sh  phase02.md  phase03.md  phase05.md  prompt.md  python.md  quick-start.sh  rules.md  setup.sh  status-final.sh  stop.sh
.pi/: APPEND_SYSTEM.md  ONBOARDING.md  package-lock.json  package.json  safety-rules.yaml  settings.json
backend/: DATABASE_PERFORMANCE_README.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
docs/: API.md  ORG_DOC_FLOW.md  SETUP.md  phase01.md  phase04.md  phase06.md
frontend/: Dockerfile  Dockerfile.dev  components.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.optimized.ts  vite.config.ts  vitest.config.ts
k8s/: deployment.yaml
memory-bank/: activeContext.md  hrm.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ml-services/: requirements.txt
prompts/: db.md  graph.md  python.md  react.md
scripts/: backend-dev.sh  check-ports.sh  check-services.sh  configure-env.sh  configure-ports.sh  deploy.sh  (+14 more)
tools/pi-viewer/server/: activity.py  fs.py  main.py  pyproject.toml  yaml_io.py
tools/pi-viewer/server/routes/: activity.py  agents.py  docs.py  events.py  settings.py  sprints.py  state.py
(+666 files in other folders)
